# simple-middleware

./: CHANGE_LOG.md  Cargo.toml  README.md
examples/: basic.rs  function.rs  intercept_before.rs  last.rs
src/: lib.rs  manager.rs  middleware.rs
src/docs/: index.md
