[package]
name = "simple-middleware"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "General purpose middleware crate"
repository = "https://github.com/shiftrightonce/simple-middleware"
keywords = ["webdev", "web", "middleware"]
categories = ["asynchronous", "web-programming"]

[dependencies]
async-trait = "0.1"
futures = "0.3.27"
tokio = { version = "1.28.2", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }
uuid = { version = "1.3.4", features = ["v4"] }
